Modulo de propuestas y proyectos avanzado, errores corregidos
